# rag-article-rs

./: .gitignore  Cargo.toml  README.md  script.py
src/: cli.rs  lib.rs  main.rs  ollama_utils.rs  parallel_downloader.rs  persistent.rs  tests.rs
