[package]
name = "enhanced_rag_article_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
html2text = "0.6"
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Для векторных embeddings (используем candle для локальных моделей)
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"

# Для работы с HTTP и JSON
hyper = "0.14"
hyper-tls = "0.5"

# Для конфигурации
config = "0.13"
toml = "0.8"

# Для обработки текста
unicode-segmentation = "1.10"