[package]
name = "enhanced_rag_article_generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enhanced-rag-generator"
path = "src/main.rs"

[lib]
name = "enhanced_rag_article_generator"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.20"
html2text = "0.12"
url = "2.5"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
urlencoding = "2.1"

# Простые зависимости для базовой обработки текста
ndarray = "0.15"
nalgebra = "0.32"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true